--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "vite": "^6.2.1",
+    "vite-plugin-pwa": "^1.0.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
