--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.1.1",
     "axios": "^1.8.4",
     "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.1",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
