--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,11 @@
   command = "npm run build"
   publish = "dist"
 
+[[redirects]]
+  from = "/api/*"
+  to = "http://54.208.50.238:8080/api/:splat"
+  status = 200
+  force = true
 
 [[redirects]]
   from = "/*"
