--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# 백엔드 API 서버 URL (개발용)
-VITE_API_URL=http://localhost:8080/api
+# 백엔드 API 서버 URL (실서버용)
+VITE_API_URL=http://dondothat.duckdns.org:8080/api
 
-# WebSocket 서버 URL (개발용)
-VITE_WS_URL=http://localhost:8080
+# WebSocket 서버 URL (실서버용)
+VITE_WS_URL=http://dondothat.duckdns.org:8080
