fix: #42 netlify.toml 수정

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
 
 
 [[redirects]]
-  from = "/*"
+  from = "/api/*"
   to = "http://dondothat.duckdns.org:8080/api/:splat"
   status = 200
   force = true
