fix: #42 netlify.toml 최종

--- a/netlify.toml
+++ b/netlify.toml
@@ -15,3 +15,8 @@
   to = "http://dondothat.duckdns.org:8080/api/:splat"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
