refactor: #51 toml 설정 수정

--- a/netlify.toml
+++ b/netlify.toml
@@ -20,3 +20,15 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+  [[redirects]]
+    from = "/oauth2/*"
+    to = "http://dondothat.duckdns.org:8080/oauth2/:splat"
+    status = 200
+    force = true
+
+  [[redirects]]
+    from = "/login/*"
+    to = "http://dondothat.duckdns.org:8080/login/:splat"
+    status = 200
+    force = true
