--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-regular-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/vue-fontawesome": "^3.1.1",
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.8.4",
+    "chart.js": "^4.5.0",
     "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.1",
     "sockjs-client": "^1.6.1",
