Fix: #188 .env 파일 URL 변경

--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,5 @@
 VITE_API_URL=/api
 
 # WebSocket 서버 URL (배포환경용)
-VITE_WS_URL=wss://dondothat.netlify.app
+# VITE_WS_URL=wss://dondothat.netlify.app
+VITE_WS_URL=/api
