--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@
 VITE_API_URL=http://localhost:8080/api
 
 # WebSocket 서버 URL (개발환경용)
-VITE_WS_URL=http://localhost:8080
+VITE_WS_URL=http://localhost:8080/api
